force-app/main/default/objects/Account/fields/AccountCurrency__c.field-meta.xml
<CustomField>
    <fullName>AccountCurrency__c</fullName>
    <description>기존 Dynamics 참조</description>
    <inlineHelpText>거래처의 환종</inlineHelpText>
    <label>Account Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_Currency</valueSetName>
    </valueSet>
</CustomField>