force-app/main/default/objects/Account/fields/AccountName_fm__c.field-meta.xml
<CustomField>
    <fullName>AccountName_fm__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Id, Name, &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>거래처 고객명</inlineHelpText>
    <label>Account Name</label>
    <type>Text</type>
</CustomField>