force-app/main/default/objects/Account/fields/AccountOwner_fm__c.field-meta.xml
<CustomField>
    <fullName>AccountOwner_fm__c</fullName>
    <formula>IF(ISBLANK(Owner.FirstName), &apos;&apos;, Owner.FirstName&amp;&apos; &apos;) &amp; Owner.LastName</formula>
    <label>Account Owner(fm)</label>
    <type>Text</type>
</CustomField>