force-app/main/default/objects/Account/fields/ActiveVn_is__c.field-meta.xml
<CustomField>
    <fullName>ActiveVn_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active VN</label>
    <type>Checkbox</type>
</CustomField>