force-app/main/default/objects/Account/fields/AddressKO__c.field-meta.xml
<CustomField>
    <fullName>AddressKO__c</fullName>
    <label>Office Address(KO)</label>
    <type>Address</type>
</CustomField>