force-app/main/default/objects/Account/fields/AddrStreet__c.field-meta.xml
<CustomField>
    <fullName>AddrStreet__c</fullName>
    <label>AddrStreet</label>
    <length>255</length>
    <type>Text</type>
</CustomField>