force-app/main/default/objects/Account/fields/BizGroup__c.field-meta.xml
<CustomField>
    <fullName>BizGroup__c</fullName>
    <label>Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LG</fullName>
            </value>
            <value>
                <fullName>GS</fullName>
            </value>
            <value>
                <fullName>LS</fullName>
            </value>
            <value>
                <fullName>LX</fullName>
            </value>
            <value>
                <fullName>LIG</fullName>
            </value>
            <value>
                <fullName>LF</fullName>
            </value>
            <value>
                <fullName>일반</fullName>
                <default>true</default>
                <label>일반</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>