force-app/main/default/objects/Account/fields/BizTaxNo__c.field-meta.xml
<CustomField>
    <fullName>BizTaxNo__c</fullName>
    <description>기존 Dynamics 참조</description>
    <inlineHelpText>사업자 등록 번호, 하이픈 제외하고 숫자만 입력하세요.
e.g., 1231312345</inlineHelpText>
    <label>Business Taxpayer ID Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>