force-app/main/default/objects/Account/fields/BizTaxNo_fm__c.field-meta.xml
<CustomField>
    <fullName>BizTaxNo_fm__c</fullName>
    <formula>IF(LEN(BizTaxNo__c)=10,
  LEFT(BizTaxNo__c, 3) &amp; &quot;-&quot; &amp; MID(BizTaxNo__c, 4, 2) &amp; &quot;-&quot; &amp; RIGHT(BizTaxNo__c, 5),
  BizTaxNo__c
)</formula>
    <label>Business Taxpayer ID Number(fm)</label>
    <type>Text</type>
</CustomField>