force-app/main/default/objects/Account/fields/CompanyAcronym__c.field-meta.xml
<CustomField>
    <fullName>CompanyAcronym__c</fullName>
    <description>기존 Dynamics 참조</description>
    <inlineHelpText>거래처명 약칭</inlineHelpText>
    <label>Company Name_Acronym</label>
    <length>255</length>
    <type>Text</type>
</CustomField>