force-app/main/default/objects/Account/fields/CompanyCode__c.field-meta.xml
<CustomField>
    <fullName>CompanyCode__c</fullName>
    <label>(X)Company Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>