force-app/main/default/objects/Account/fields/CompanyNameEng__c.field-meta.xml
<CustomField>
    <fullName>CompanyNameEng__c</fullName>
    <description>기존 Dynamics 참조</description>
    <inlineHelpText>거래처명_영문</inlineHelpText>
    <label>Company Name(Eng)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>