force-app/main/default/objects/Account/fields/CompanyNameKor__c.field-meta.xml
<CustomField>
    <fullName>CompanyNameKor__c</fullName>
    <description>기존 Dynamics 참조</description>
    <inlineHelpText>거래처명(한글)</inlineHelpText>
    <label>Company Name(Kor)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>