force-app/main/default/objects/Account/fields/Country_fm__c.field-meta.xml
<CustomField>
    <fullName>Country_fm__c</fullName>
    <formula>Text (  Country__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Country(fm)</label>
    <type>Text</type>
</CustomField>