force-app/main/default/objects/Account/fields/Domicile__c.field-meta.xml
<CustomField>
    <fullName>Domicile__c</fullName>
    <defaultValue>&apos;Domestic&apos;</defaultValue>
    <label>Domicile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Domestic</fullName>
            </value>
            <value>
                <fullName>Foreign</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>