force-app/main/default/objects/Account/fields/DUNS__c.field-meta.xml
<CustomField>
    <fullName>DUNS__c</fullName>
    <label>D-U-N-S</label>
    <length>9</length>
    <type>Text</type>
</CustomField>