force-app/main/default/objects/Account/fields/ERPCode__c.field-meta.xml
<CustomField>
    <fullName>ERPCode__c</fullName>
    <description>기존 Dynamics 참조</description>
    <label>ERP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>