force-app/main/default/objects/Account/fields/GPSCoordinates__c.field-meta.xml
<CustomField>
    <fullName>GPSCoordinates__c</fullName>
    <label>GPS Coordinates</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>