force-app/main/default/objects/Account/fields/InsCode__c.field-meta.xml
<CustomField>
    <fullName>InsCode__c</fullName>
    <description>기존 Dynamics 참조(승인 시 경영관리팀에서 입력)</description>
    <inlineHelpText>보험사 코드</inlineHelpText>
    <label>Ins.Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>