force-app/main/default/objects/Account/fields/InsuredType__c.field-meta.xml
<CustomField>
    <fullName>InsuredType__c</fullName>
    <label>Insured Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
                <label>일반(계약자)</label>
            </value>
            <value>
                <fullName>Insurer</fullName>
                <label>보험사</label>
            </value>
            <value>
                <fullName>Reinsurer</fullName>
                <label>재보험사</label>
            </value>
            <value>
                <fullName>Broker</fullName>
                <label>중개사</label>
            </value>
            <value>
                <fullName>MGA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>