force-app/main/default/objects/Account/fields/isBrokerAcc__c.field-meta.xml
<CustomField>
    <fullName>isBrokerAcc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>거래처 중개사 여부 관리</description>
    <label>isBrokerAcc</label>
    <type>Checkbox</type>
</CustomField>