force-app/main/default/objects/Account/fields/isGeneralAcc__c.field-meta.xml
<CustomField>
    <fullName>isGeneralAcc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>거래처 일반(계약자) 여부 관리</description>
    <label>isGeneralAcc</label>
    <type>Checkbox</type>
</CustomField>