force-app/main/default/objects/Account/fields/isInsurerAcc__c.field-meta.xml
<CustomField>
    <fullName>isInsurerAcc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>거래처 보험사 여부 관리</description>
    <label>isInsurerAcc</label>
    <type>Checkbox</type>
</CustomField>