force-app/main/default/objects/Account/fields/isMGAAcc__c.field-meta.xml
<CustomField>
    <fullName>isMGAAcc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>거래처 MGA 여부 관리</description>
    <label>isMGAAcc</label>
    <type>Checkbox</type>
</CustomField>