force-app/main/default/objects/Account/fields/isReinsurerAcc__c.field-meta.xml
<CustomField>
    <fullName>isReinsurerAcc__c</fullName>
    <defaultValue>false</defaultValue>
    <description>거래처 재보험사 여부 관리</description>
    <label>isReinsurerAcc</label>
    <type>Checkbox</type>
</CustomField>