force-app/main/default/objects/Account/fields/IsRepresentative__c.field-meta.xml
<CustomField>
    <fullName>IsRepresentative__c</fullName>
    <description>기존 Dynamics 참조</description>
    <inlineHelpText>대표 거래처(청구처)여부</inlineHelpText>
    <label>Rep. Y/N</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>