force-app/main/default/objects/Account/fields/KycCompletedKr_is__c.field-meta.xml
<CustomField>
    <fullName>KycCompletedKr_is__c</fullName>
    <defaultValue>true</defaultValue>
    <label>KYC Completed(KR)</label>
    <type>Checkbox</type>
</CustomField>