force-app/main/default/objects/Account/fields/KycCompletedRe_is__c.field-meta.xml
<CustomField>
    <fullName>KycCompletedRe_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>KYC Completed(Re)</label>
    <type>Checkbox</type>
</CustomField>