force-app/main/default/objects/Account/fields/KycCompletedVn_is__c.field-meta.xml
<CustomField>
    <fullName>KycCompletedVn_is__c</fullName>
    <defaultValue>true</defaultValue>
    <label>KYC Completed(VN)</label>
    <type>Checkbox</type>
</CustomField>