force-app/main/default/objects/Account/fields/LastNewsFetchedAT__c.field-meta.xml
<CustomField>
    <fullName>LastNewsFetchedAT__c</fullName>
    <label>Last News Fetched At</label>
    <type>DateTime</type>
</CustomField>