force-app/main/default/objects/Account/fields/LastStatusChangeDt__c.field-meta.xml
<CustomField>
    <fullName>LastStatusChangeDt__c</fullName>
    <label>Last Act/De-activation date</label>
    <type>Date</type>
</CustomField>