force-app/main/default/objects/Account/fields/LKInternalCompany_is__c.field-meta.xml
<CustomField>
    <fullName>LKInternalCompany_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LK Internal Company</label>
    <type>Checkbox</type>
</CustomField>