force-app/main/default/objects/Account/fields/LKInternalRegion__c.field-meta.xml
<CustomField>
    <fullName>LKInternalRegion__c</fullName>
    <label>LK Internal Region</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_BizRegion</valueSetName>
    </valueSet>
</CustomField>