force-app/main/default/objects/Account/fields/RegApprovalStatus__c.field-meta.xml
<CustomField>
    <fullName>RegApprovalStatus__c</fullName>
    <label>Reg.Approval Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>COM_ApprovalStatus</valueSetName>
    </valueSet>
</CustomField>