force-app/main/default/objects/Account/fields/RepAccount_lk__c.field-meta.xml
<CustomField>
    <fullName>RepAccount_lk__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>기존 Dynamics 참조</description>
    <inlineHelpText>대표 거래처(청구처) 지정, Rep. Y/N = N 인 경우, 필수</inlineHelpText>
    <label>Rep. Company</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.isBrokerAcc__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>