force-app/main/default/objects/Account/fields/SanctionCheck_is__c.field-meta.xml
<CustomField>
    <fullName>SanctionCheck_is__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sanction Check</label>
    <type>Checkbox</type>
</CustomField>