force-app/main/default/objects/Account/fields/Update_is__c.field-meta.xml
<CustomField>
    <fullName>Update_is__c</fullName>
    <defaultValue>false</defaultValue>
    <description>트리거에서 Update 반영 여부 체크하는 필드</description>
    <label>Update(Y/N)</label>
    <type>Checkbox</type>
</CustomField>