force-app/main/default/objects/Account/listViews/All_Accounts_Insurer.listView-meta.xml
<ListView>
    <fullName>All_Accounts_Insurer</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CompanyNameKor__c</columns>
    <columns>CompanyAcronym__c</columns>
    <columns>InsuredType__c</columns>
    <columns>AccountOwner_fm__c</columns>
    <columns>isInsurerAcc__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>InsuredType__c</field>
        <operation>includes</operation>
        <value>Insurer</value>
    </filters>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.BusinessAccount</value>
    </filters>
    <label>All Accounts(Insurer)</label>
</ListView>