force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CompanyNameEng__c</columns>
    <columns>CompanyAcronym__c</columns>
    <columns>InsuredType__c</columns>
    <columns>AccountOwner_fm__c</columns>
    <columns>Country__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Accounts</label>
</ListView>